added functionality to view message and related comments on new page

--- a/views/home.erb
+++ b/views/home.erb
@@ -7,7 +7,7 @@
 <dl>
 <% messages.each do |message| %>
   <dt>
-    <%= message["message"] %>
+    <a href='/messages/<%= message["id"] %>'><%= message["message"] %></a>
 
     <form method="get" action="/<%= message["id"] %>/edit">
       <button>Edit Message</button></form>
